--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -26,6 +26,7 @@ mdurl==0.1.2
 numpy==2.0.2
 orjson==3.10.16
 passlib==1.7.4
+profanity==1.1
 profanity-check==1.0.3
 pydantic==2.11.3
 pydantic-extra-types==2.10.3
